--- a/jnihds/build.xml
+++ b/jnihds/build.xml
@@ -193,7 +193,8 @@
    !-->
   <extclasspath id="installed.classpath">
 
-    <!-- JNIHDS needs no external classes -->
+    <!-- Util -->
+    <pathelement location="${star.jar.dir}/util/util.jar"/>
 
   </extclasspath>
 
@@ -214,9 +215,7 @@
    !   the extra classpath.
    !-->
   <extclasspath id="built.jarpath">
-
-    <!-- JNIHDS needs no external classes -->
-
+    <pathelement location="${star.build.dir}/util/lib/util/util.jar"/>
   </extclasspath>
 
   <path id="built.classpath">
@@ -278,6 +277,12 @@
    !-->
   <target name="check_packages"
           unless="runonly.install">
+
+    <!-- Need Util -->
+    <available property="util.present"
+               classpathref="classpath"
+               classname="uk.ac.starlink.util.Loader"/>
+    <fail message="No Util available" unless="util.present"/>
 
     <!-- Need JUnit for testcases, not essential -->
     <condition property="testframework.present">
@@ -480,7 +485,8 @@
     <jar destfile="${dist.lib.pkg}/${name}.jar" basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" value=""/>
+        <attribute name="Class-Path" 
+                   value="../util/util.jar"/>
       </manifest>
     </jar>
 
