--- a/hds/build.xml
+++ b/hds/build.xml
@@ -669,15 +669,26 @@
   <target name="deinstall"
           description="-> undo the install target">
 
-    <loadfile property="files" srcFile="${install.log}"/>
+    <available file="${install.log}" property="install.log.present"/>
 
-    <listdelete quiet="false" failonerror="true">
+    <antcall target="real_deinstall"/>
+
+  </target>
+
+  <!-- Real deinstall target. Only activated if "install.log.present"
+   !   is defined -->
+  <target name="real_deinstall"
+          if="install.log.present">
+
+    <loadfile property="files" srcFile="${install.log}"/>
+    <listdelete>
       <filelist dir="/" files="${files}"/>
     </listdelete>
 
     <delete file="${install.log}" failonerror="false"/>
 
   </target>
+
 
   <!--
    !   =============================
