Changes applied when I got a bit better understanding of what should depend on what.

--- a/ndx/build.xml
+++ b/ndx/build.xml
@@ -194,12 +194,6 @@
     <!-- JUnit -->
     <pathelement location="${star.jar.dir}/junit/junit.jar"/>
 
-    <!-- FITS - optional -->
-    <pathelement location="${star.jar.dir}/fits/fits.jar"/>
-
-    <!-- HDS - optional -->
-    <pathelement location="${star.jar.dir}/hds/hds.jar"/>
-
   </extclasspath>
 
   <!-- Generate the local build classpath. This is the most difficult
@@ -222,8 +216,6 @@
     <pathelement location="${star.build.dir}/array/lib/array/array.jar"/>
     <pathelement location="${star.build.dir}/util/lib/util/util.jar"/>
     <pathelement location="${star.build.dir}/junit/lib/junit/junit.jar"/>
-    <pathelement location="${star.build.dir}/hds/lib/hds/hds.jar"/>
-    <pathelement location="${star.build.dir}/fits/lib/fits/fits.jar"/>
     <pathelement location="${star.build.dir}/jniast/lib/jniast/jniast.jar"/>
   </extclasspath>
 
@@ -307,9 +299,6 @@
                classname="uk.ac.starlink.util.SourceReader"/>
 
     <fail message="No Util available" unless="util.present"/>
-
-    <!--  HDS and FITS, while desirable, are not required
-          (they are installed at runtime if present) -->
 
     <!--  Would like JUnit for testing -->
     <condition property="testframework.present">
@@ -402,7 +391,7 @@
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path" 
          value="../junit/junit.jar ../array/array.jar ../jniast/jniast.jar
-                ../util/util.jar ../fits/fits.jar ../hds/hds.jar"/>
+                ../util/util.jar"/>
       </manifest>
     </jar>
 
