--- a/astgui/build.xml
+++ b/astgui/build.xml
@@ -211,9 +211,9 @@
    !   entered into the main jar file manifest.
    !-->
   <path id="package.jars">
-     <fileset dir="${src.jars.dir}">
+     <!--<fileset dir="${src.jars.dir}">
         <include name="*.jar"/>
-     </fileset>
+     </fileset>-->
   </path>
 
   <path id="built.classpath">
@@ -364,9 +364,9 @@
      !   make these available for resolution by other locally built
      !   packages that are using this one -->
     <mkdir dir="${dist.lib.pkg}"/>
-    <copy todir="${dist.lib.pkg}">
+    <!--<copy todir="${dist.lib.pkg}">
        <fileset dir="${src.jars.dir}"/>
-    </copy>
+    </copy>-->
 
   </target>
 
