--- a/soapserver/build.xml
+++ b/soapserver/build.xml
@@ -216,9 +216,9 @@
    !   entered into the main jar file manifest.
    !-->
   <path id="package.jars">
-     <fileset dir="${src.jars.dir}">
+     <!--<fileset dir="${src.jars.dir}">
         <include name="*.jar"/>
-     </fileset>
+     </fileset>-->
   </path>
 
   <path id="built.classpath">
@@ -372,9 +372,9 @@
      !   make these available for resolution by other locally built
      !   packages that are using this one -->
     <mkdir dir="${dist.lib.pkg}"/>
-    <copy todir="${dist.lib.pkg}">
+    <!--<copy todir="${dist.lib.pkg}">
        <fileset dir="${src.jars.dir}"/>
-    </copy>
+    </copy>-->
 
   </target>
 
@@ -440,9 +440,9 @@
 
     <!-- Copy extra documentation, note doesn't include javadocs these
      !   are generated from the source-->
-    <copy todir="${dist.docs.pkg}">
+    <!--<copy todir="${dist.docs.pkg}">
       <fileset dir="${src.docs}"/>
-    </copy>
+    </copy>-->
 
     <!-- Set permissions on contents of distribution directories -->
     <chmod perm="ugo+rx" dir="${dist.dir}" type="dir" includes="**"
