--- a/sog/build.xml
+++ b/sog/build.xml
@@ -489,9 +489,9 @@ value="../jsky/jsky.jar ../array/array.jar ../ndx/ndx.jar ../jaiutil/jaiutil.jar
 
     <!-- Copy extra documentation, note doesn't include javadocs these
      !   are generated from the source-->
-    <copy todir="${dist.docs.pkg}">
+    <!--<copy todir="${dist.docs.pkg}">
       <fileset dir="${src.docs}"/>
-    </copy>
+    </copy>-->
 
     <!-- Set permissions on contents of distribution directories -->
     <chmod perm="ugo+rx" dir="${dist.dir}" type="dir" includes="**"
