--- a/splat/build.xml
+++ b/splat/build.xml
@@ -551,9 +551,9 @@ value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar ../astgui/astgui.jar
 
     <!-- Copy extra documentation, note doesn't include javadocs these
      !   are generated from the source-->
-    <copy todir="${dist.docs.pkg}">
+    <!--<copy todir="${dist.docs.pkg}">
       <fileset dir="${src.docs}"/>
-    </copy>
+    </copy>-->
 
     <!-- Set permissions on contents of distribution directories -->
     <chmod perm="ugo+rx" dir="${dist.dir}" type="dir" includes="**"
