--- a/splat/build.xml
+++ b/splat/build.xml
@@ -509,9 +509,10 @@
         <attribute name="Main-Class"
                    value="uk.ac.starlink.splat.iface.SplatBrowserMain"/>
         <attribute name="Class-Path"
-value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar ../astgui/astgui.jar
-../ndx/ndx.jar ../array/array.jar ../tamfits/tamfits.jar ../jniast/jniast.jar 
-../soapserver/soapserver.jar ../fits/fits.jar ../hds/hds.jar"/>
+value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar splat_help.jar  
+../astgui/astgui.jar ../ndx/ndx.jar ../array/array.jar ../tamfits/tamfits.jar 
+../jniast/jniast.jar ../soapserver/soapserver.jar ../fits/fits.jar 
+../hds/hds.jar"/>
       </manifest>
     </jar>
   </target>
@@ -551,9 +552,9 @@ value="bsh-1.1a18.jar colt.jar diva.jar jdom.jar jhall.jar ../astgui/astgui.jar
 
     <!-- Copy extra documentation, note doesn't include javadocs these
      !   are generated from the source-->
-    <!--<copy todir="${dist.docs.pkg}">
+    <copy todir="${dist.docs.pkg}">
       <fileset dir="${src.docs}"/>
-    </copy>-->
+    </copy>
 
     <!-- Set permissions on contents of distribution directories -->
     <chmod perm="ugo+rx" dir="${dist.dir}" type="dir" includes="**"
