--- a/util/build.xml
+++ b/util/build.xml
@@ -93,6 +93,7 @@
   <property name="debug" value="true"/>
   <property name="deprecation" value="false"/>
   <property name="optimize" value="true"/>
+  <property name="source.version" value="1.4"/>
 
   <!-- Extra task options, if any -->
   <property name="chmod.fail" value="false"/>
@@ -325,6 +326,7 @@
            destdir="${build.classes}"
            debug="${debug}"
            deprecation="${deprecation}"
+           source="${source.version}"
            optimize="${optimize}">
 
       <classpath refid="classpath"/>
@@ -743,6 +745,7 @@
              locale="en"
              windowtitle="${Name} API"
              doctitle="${Name}"
+             source="${source.version}"
              classpathref="classpath">
 
       <!-- Get a list of directories that name all the potential
@@ -827,6 +830,7 @@
     <javac srcdir="${tests.dir}"
            destdir="${build.tests}"
            debug="${debug}"
+           source="${source.version}"
            deprecation="${deprecation}" >
       <classpath refid="tests-classpath"/>
     </javac>
