Overhauled implementation of FITS nodes so that they can be stored in files or streams (added FITSSTreamDataNode with a DataSource constructor). Also fixed some fundamental bugs in the implementation of tar archives - now rather slower but not suffering from serious thread safety issues.

--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -87,7 +87,7 @@
 
   <!-- Compilation options -->
   <property name="debug" value="true"/>
-  <property name="deprecation" value="false"/>
+  <property name="deprecation" value="true"/>
   <property name="optimize" value="true"/>
   <property name="source.version" value="1.4"/>
 
@@ -1068,7 +1068,7 @@
           description="-> run JUnit tests"/>
 
   <target name="run-tests"
-          depends="compile-tests"
+          depends="install,compile-tests"
           if="junit.present">
 
     <junit printsummary="${junit.summary}" haltonfailure="yes"
