--- a/util/build.xml
+++ b/util/build.xml
@@ -186,9 +186,6 @@
     <!-- JUnit -->
     <pathelement location="${star.jar.dir}/junit/junit.jar"/>
 
-    <!-- FITS -->
-    <pathelement location="${star.jar.dir}/tamfits/tamfits.jar"/>
-
   </extclasspath>
 
   <!-- Generate the local build classpath. This is the most difficult
@@ -209,7 +206,6 @@
    !-->
   <extclasspath id="built.jarpath">
     <pathelement location="${star.build.dir}/junit/lib/junit/junit.jar"/>
-    <pathelement location="${star.build.dir}/tamfits/lib/tamfits/tamfits.jar"/>
   </extclasspath>
 
   <path id="built.classpath">
@@ -362,7 +358,7 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path"
-                   value="../junit/junit.jar ../tamfits/tamfits.jar"/>
+                  value="../junit/junit.jar ../ant.jar"/>
       </manifest>
     </jar>
 
